# AtomForge

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
atomforge/: api.py  benchmark.py  fetch.py  inference.py  manifest.py  orchestrator.py  schemas.py  simulator.py  stats.py  validators.py
frontend/: package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AtomViewer.tsx
skills/arxiv-researcher/arxiv-researcher/: SKILL.md
skills/arxiv-researcher/arxiv-researcher/references/: parameter-extraction.md
skills/arxiv-researcher/arxiv-researcher/scripts/: search_arxiv.py
skills/atomforge/atomforge/: SKILL.md
skills/atomforge/atomforge/references/: dag-schemas.md  metrics-dictionary.md  modal-endpoints.md
tests/: test_orchestrator_flow.py  test_simulator.py  test_validation.py
